--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LOCOMOTIVE - 2025</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div id="main">
+        <div id="page1"></div>
+        <div id="page2"></div>
+        <div id="page3"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 
