--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div id="main">
         <div id="page1"></div>
-        <div id="page2"></div>
+        <div id="page2">
+            <img src="https://images.unsplash.com/photo-1490732239438-ee956a60ed41?q=80&w=2047&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        </div>
         <div id="page3"></div>
     </div>
     <script src="script.js"></script>
