--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 </head>
 
 <body>
-    <div id="main">
-        <div id="page1"></div>
-        <div id="page2">
-            <img src="https://images.unsplash.com/photo-1736849696341-7fa6e171b13d?q=80&w=1936&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    <div id="main" data-scroll-container>
+        <div id="page1" data-scroll>
+
+        </div>
+        <div id="page2" data-scroll>
+            <img data-scroll data-scroll-speed="-3" data-scroll-direction="horizontal" 
+                src="https://images.unsplash.com/photo-1736849696341-7fa6e171b13d?q=80&w=1936&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="">
+                <img data-scroll data-scroll-speed="3" data-scroll-direction="horizontal" 
+                src="https://images.unsplash.com/photo-1736849696341-7fa6e171b13d?q=80&w=1936&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                 alt="">
         </div>
-        <div id="page3"></div>
+        <div id="page3" data-scroll>
+
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="script.js"></script>
